# imgui_3dprofiler

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
imgui/: CMakeLists.txt
imgui/include/: BaseWindow.h  CameraScannerUI.h  ContentViewWindow.h  IconsFontAwesome6.h  ImguiLogger.h  MainWindow.h  TreeViewWindow.h  utility.h
imgui/src/: CameraScannerUI.cpp  MainWindow.cpp  main.cpp  utility.cpp
plc_serial/: CMakeLists.txt
plc_serial/include/: mitsubishi_plc_fx_link.h
plc_serial/serial/lib/: serial.lib  seriald.lib
plc_serial/serial/lib/cmake/: serialConfig-debug.cmake  serialConfig-release.cmake  serialConfig.cmake
plc_serial/src/: mitsubishi_plc_fx_link.cpp
plc_serial/test/: CMakeLIsts.txt  main.cpp  test_context.h  test_link.cpp
scanner_l/: CMakeLists.txt
scanner_l/ScannerConfig/: all_path_config.json  all_path_config_old.json  config_plc.json  global_transform.yml  scanner_0.json  scanner_0.txt
scanner_l/ScannerConfig/0/: multi_calib_config.xml
scanner_l/include/scanner_l/: FileWatcher.h  Scanner_Server.h  data_callback.h  motion_conf.h  scan_io.h  scan_share_memory.h  scanner_all_data.h  scanner_l_api.h  type.h
scanner_l/src/: FileWatcher.cpp  Scanner_Server.cpp  motion_conf.cpp  scanner_l_api.cpp
